<resources>
    <string name="app_name">S0</string>
    <string name="title">MyStack App</string>
    <string name="top_descriptor">Top of MyStack:</string>
    <string name="top_initial_text">Push a string below to start</string>
    <string name="push_button">Push</string>
    <string name="push_hint_text">Enter a string to push</string>
    <string name="pop_button">Pop</string>
    <string name="delete_button">Delete</string>
    <string name="delete_hint_text">Enter a number of strings to delete</string>
    <string name="enter">ENTER</string>
    <string name="easy">Easy</string>
    <string name="medium">Medium</string>
    <string name="hard">Hard</string>
    <string name="frogger">Frogger</string>
    <string name="choose_your_difficulty">Choose Your Difficulty</string>
    <string name="type_your_username_here">Type your username here</string>
    <string name="start">Start</string>
    <string name="player_character_view">player character view</string>
    <string name="choose_your_sprite">Choose Your Sprite</string>
    <string name="yellow">YELLOW</string>
    <string name="blue">BLUE</string>
    <string name="green">GREEN</string>
    <string name="yellow_frog">yellow frog</string>
    <string name="blue_frog">blue frog</string>
    <string name="green_frog">green frog</string>
    <string name="anonymous">anonymous</string>
    <string name="_0">0</string>
    <string name="easyShow">5 EASY</string>
    <string name="mediumShow">3 MEDIUM</string>
    <string name="hardShow">1 HARD</string>
    <string name="score_0">Score: 0</string>
    <string name="layout">layout</string>
    <string name="game_over">Game Over</string>
    <string name="exit">Exit</string>
    <string name="restart">Restart</string>
    <string name="score">Score</string>
    <string name="scoreT">Score:</string>
    <string name="congratulations">Congratulations!</string>
</resources>